fix: fixed dotnet-version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 5.0.x, 6.0x, 8.0.x
+          dotnet-version: 5.0.x, 6.0.x, 8.0.x
       - name: Add User Secrets
         run: |
           dotnet user-secrets set "Token" "${{ secrets.TEST_TOKEN }}" --project ./tests/Pointauc.Api.Tests
