--- a/src/Pointauc.Api/Pointauc.Api.csproj
+++ b/src/Pointauc.Api/Pointauc.Api.csproj
@@ -17,6 +17,7 @@
 		<AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageIcon>favicon-96x96.png</PackageIcon>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 	</PropertyGroup>
 
 	<ItemGroup>
